# SIApop

./: .gitignore  CMakeLists.txt  Makefile  README.html  README.md
R/: convert.R  fishplot.R  plot.R  siapop.R  utilities.R
doc/: CustomizingModels.Rmd  CustomizingModels.html  McDonald and Michor_8-16.docx  Passenger Mutation Simulation.Rmd  Passenger_Mutation_Simulation.html
examples/constant-rate/epistasis/: inputdata.txt
examples/constant-rate/fitness/: ancestors.txt  inputdata.txt
examples/constant-rate/passenger/: .Rhistory  Passenger Mutation Simulation.Rmd  ancestors.txt  clonedata.txt  inputdata.txt  sim_stats.txt
examples/constant-rate/punctuated/: inputdata.txt
examples/time-dependent/: inputdata.txt
examples/time-dependent/epistasis/: inputdata.txt
examples/time-dependent/fitness/: inputdata.txt
examples/time-dependent/passenger/: inputdata.txt
examples/time-dependent/punctuated/: inputdata.txt
examples/time-dependent/workthrough/: ancestors.txt  clonedata.txt  inputdata.txt  (+3 more)
include/constant-rate/: clonelist.h  globalstructs.h  parameterlist.h  rvfunctions.h
include/simple/: clonelist.h  globalstructs.h  parameterlist.h
include/time-dependent/: clonelist.h  globalstructs.h  parameterlist.h  ratefunctions.h  rvfunctions.h
src/constant-rate/: BDsim.cpp  CMakeLists.txt  SIApop.cpp  clonelist.cpp  parameterlist.cpp  rvfunctions.cpp
src/simple/: CMakeLists.txt  SIApop.cpp  clonelist.cpp  parameterlist.cpp
src/time-dependent/: BDsim.cpp  CMakeLists.txt  SIApop.cpp  clonelist.cpp  parameterlist.cpp  ratefunctions.cpp  rvfunctions.cpp
